# offline_chatbot_app

./: .env.firebase.config.example  .firebase.configs.SECURITY  .firebase.configs.example  .firebaserc  .gitattributes  .gitignore  ANDROID_IMPLEMENTATION.md  README.md  chat_history_2025-08-18.csv  firebase.json  firestore.indexes.json  firestore.rules  list_of_local_models.txt  list_of_models.csv  list_of_models.txt  package-lock.json  package.json  pubspec.yaml  pyproject.toml
.firebase/: hosting.b3V0.cache
.github/workflows/: example_firebase_setup.yml
android/: build_native.sh
android/app/: build.gradle.kts  google-services.json  google-services.json.example
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
cache/: test_data.csv
cache/chat_log/: chat_history_2025-07-11.numbers  chat_history_2025-07-15.csv
config/: config.js
docs/: ADMIN_CHAT_HISTORY_ACCESS.md  CHAT_HISTORY_LOGGING.md  CHAT_HISTORY_REMOTE_LOGGER_EXPLAINED.md  FIREBASE_SECURITY_QUICK_START.md  FIREBASE_SECURITY_SETUP.md  GITHUB_SECRETS_SETUP.md  MODEL_DOWNLOAD_STRATEGIES.md  PRIVACY_FIRST_DATA_COLLECTION.md  TOKEN_MANAGEMENT_STRATEGY.md  WEB_APP_TOKEN_MANAGEMENT.md
evaluation/: .gitignore  __init__.py  clean_data.py  evaluate_llm_responses.py  experiment_info.txt  experiment_note.txt  list_of_models.txt  prepare_data.py  questions_experiment_2025-11-06T11-25-56.csv  requirements.txt  similarity_metrics.py
evaluation/analysis/: __init__.py  __main__.py  geval_scores_table.tex
evaluation/analysis/geval/: Gemma3-1B_baseline_100_words_geval_scores.csv  Gemma3-1B_baseline_500_words_geval_scores.csv  Gemma3-1B_baseline_50_words_geval_scores.csv  Gemma3-1B_baseline_geval_scores.csv  Gemma3-1B_medical_safety_100_words_geval_scores.csv  Gemma3-1B_medical_safety_500_words_geval_scores.csv  __init__.py  (+29 more)
evaluation/dart/: experiment_entry.dart  experiment_runner.dart
evaluation/dataset/: __init__.py  android_gemma3.csv  chat_history_2025-08-18.csv  chatdoctor_questions.csv  draft.csv  load_datasets.py  questions.csv  reference_data.csv  test.csv  test_data.csv
evaluation/results/: Gemma3-1B_100_word_limit.csv  Hammer2p1.csv  Hammer2p1_100_word_limit.csv  Qwen2.5.csv  Qwen2.5_50_word_limit.csv  SmolLM-135M_50word__limit.csv  SmolLM_135M_100_word_limit.csv  Smollm-135M.csv  android_gemma3.csv  android_hammer2p1_05b.csv  android_qwen2.5.csv  android_qwn2.5.csv  macos_test_results.csv  medicoai_v1_prompt.csv  results_macos.csv
ios/Pods-Runner/: Pods-Runner-acknowledgements.markdown  Pods-Runner-acknowledgements.plist  Pods-Runner-frameworks-Profile-input-files.xcfilelist  Pods-Runner-frameworks-Release-output-files.xcfilelist  Pods-Runner-frameworks.sh  Pods-Runner.profile.xcconfig
ios/Runner/: GoogleService-Info.plist  GoogleService-Info.plist.example  Info.plist  RunnerRelease.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/config/: CONFIGURATION_GUIDE.md  README.md  app_constants.dart  environment_config.dart  external_urls.dart  firebase_config.dart  llm_config.dart  path_configs.dart  prompt_configs.dart
lib/constants/: paths.dart  prompts.dart
lib/evaluation/: experiment_runner.dart  experiment_runner_io.dart  experiment_runner_stub.dart  experiment_runner_web.dart  file_reader_io.dart  file_reader_stub.dart
lib/screens/: admin_logs_screen.dart  chat_screen.dart  login_screen.dart  settings_screen.dart  splash_screen.dart
lib/services/: android_llm_service.dart  app_state.dart  dummy_android_service.dart  fast_llm_service.dart  llm_service.dart  llm_service_io.dart  llm_service_web.dart  mediapipe_android_service.dart  model_downloader.dart  model_downloader_io.dart  model_downloader_stub.dart  model_manager.dart  model_manager_io.dart  model_manager_web.dart  model_storage_web.dart  model_upload_web.dart  privacy_service.dart  user_service.dart
lib/utils/: bundle_utils.dart  chat_history_logger.dart  chat_history_logger_io.dart  chat_history_logger_web.dart  chat_history_remote_logger.dart  csv_download.dart  csv_download_stub.dart  csv_download_web.dart  token_estimator.dart
lib/widgets/: chat_input.dart  chat_message.dart  edit_profile_dialog.dart  max_tokens_selector.dart  model_selector.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: copy_llama_cli.sh
macos/Runner/: DebugProfile.entitlements  GoogleService-Info.plist  GoogleService-Info.plist.example  Info.plist  Release.entitlements  RunnerProfile.entitlements
macos/Runner.xcodeproj/: project.pbxproj
scripts/: load_env_and_setup.sh  remove_sensitive_files_from_git.sh  setup_firebase_config.sh
test/: widget_test.dart
web/: index.html  manifest.json  mediapipe_task.js  mediapipe_text.js  service_worker.js
web/config/: config.js
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+21 files in other folders)
