[project]
name = "evaluation"
version = "0.1.0"
description = ""
authors = [
    {name = "Aqila Faramahnd",email = "aqila.farahmand@uniburb.it"},
    {name = "Matteo Magnini", email = "matteo.magnini@unibo.it"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fire (>=0.7.1,<0.8.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "hf-transfer (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
